# CIRecon

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/cirecon/: memory.json
.github/workflows/: ci.yml
cirecon/: __init__.py  _scripts.py  agent_loop.py  dashboard.py  fix_applier.py  input_layer.py  main.py  memory.py  org_scanner.py  rule_engine.py  tools.py  validator.py
cirecon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cirecon/schemas/: github-workflow.json
examples/: cirecon.yml
tests/: test_agent_loop.py  test_fix_applier.py  test_input_layer.py  test_main.py  test_memory.py  test_org_scanner.py  test_rule_engine.py  test_tools.py  test_validator.py
tests/fixtures/: broken_needs.yml  missing_permissions.yml
